--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <div id="container"></div>
+    <br>
+    <button id="reset">reset</button>
     <script src="script.js"></script>
   </body>
 </html>
